feat(account): 实现账户登录验证和Redis集成
- 添加验证码生成功能，集成Redis存储验证码
- 实现用户登录功能，支持账号密码验证和验证码校验
- 集成Redis组件用于验证码和令牌管理
- 添加登出功能清理令牌
- 创建统一响应包装类ResponseVO
- 添加配置类AppConfig管理员账号信息
- 配置Redis连接和序列化方式
- 添加分页结果包装类PageResultVO
- 更新应用配置文件中的数据库URL和项目路径
- 移除Elasticsearch依赖，添加MyBatis-Plus分页插件
- 优化项目包名和配置文件设置

--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,11 @@
                 <version>${springboot.version}</version>
             </dependency>
             <!-- Elasticsearch -->
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
-                <version>${springboot.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
+<!--                <version>${springboot.version}</version>-->
+<!--            </dependency>-->
 
             <!-- MyBatis 集成 -->
             <dependency>
