--- a/smartMall-mcp/pom.xml
+++ b/smartMall-mcp/pom.xml
@@ -52,7 +52,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.easymall.SmartMallMcpApplication</mainClass>
+                    <mainClass>com.smartMall.SmartMallMcpApplication</mainClass>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>
             </plugin>
