feat(product): 实现商品管理功能和文件上传服务
- 添加商品信息实体类和数据库映射
- 实现商品增删改查接口和业务逻辑
- 添加文件上传和资源访问控制器
- 集成Hutool工具库支持文件操作
- 实现图片缩略图生成功能
- 添加商品属性和SKU管理功能
- 实现商品列表分页查询功能
- 配置项目文件存储路径参数

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <redisson.version>4.0.0</redisson.version>
         <alipay.version>4.40.576.ALL</alipay.version>
         <elasticsearch.version>9.2.1</elasticsearch.version>
+        <hutool.version>5.8.34</hutool.version>
     </properties>
 
     <dependencyManagement>
@@ -184,6 +185,13 @@
                 <groupId>com.alipay.sdk</groupId>
                 <artifactId>alipay-sdk-java</artifactId>
                 <version>${alipay.version}</version>
+            </dependency>
+
+            <!-- Hutool 工具包 -->
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
